samples/_failures_safe/1761342103_0f7fbf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50bd5ee6.c: In function ‘main’:
./samples/SAFE/__tmp_50bd5ee6.c:191:12: error: missing terminating " character
  191 |     printf("Iter
      |            ^~~~~
./samples/SAFE/__tmp_50bd5ee6.c:191:5: error: expected expression at end of input
  191 |     printf("Iter
      |     ^~~~~~
./samples/SAFE/__tmp_50bd5ee6.c:191:5: error: expected declaration or statement at end of input
